[package]
name = "promote-autoinvite"
version = "0.1.0"
authors = ["Jimmie Elvenmark <flugsio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0"
